--- a/casestudies/90/casestudy/www/layout/case_id_90_id_195_c_bio.html
+++ b/casestudies/90/casestudy/www/layout/case_id_90_id_195_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Carl Wade | Community Savings, or Community Threat? California Policy for Ill and Elderly Inmates
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Carl Wade | Community Savings, or Community Threat? California Policy for Ill and Elderly Inmates
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <style media="all" type="text/css">
+   @import "css_global/book/book.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/node/node.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/defaults.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/system.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/user/user.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/img_assist/img_assist.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/knightcase/style.css";
+  </style>
+  <style media="print" type="text/css">
+   @import "css_global/knightcase/print.css";
+  </style>
+  <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+  </script>
+  <script src="js/img_assist.js" type="text/javascript">
+  </script>
+  <script src="js/audioimage.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.media.js" type="text/javascript">
+  </script>
+  <script src="swfobject.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+   var GB_ROOT_DIR = "com/greybox/";
+  </script>
+  <script src="com/greybox/AJS.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/AJS_fx.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/gb_scripts.js" type="text/javascript">
+  </script>
+  <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript">
+   var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
+  </script>
+  <script type="text/javascript">
+   $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+  </script>
+  <style>
+   #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,260 +84,242 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/90/Community_Savings.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_90.html" title="Home"><span>Biography: Carl Wade</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_90.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_677.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_678.html">CA Prison Health</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_679.html">Receivership</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_680.html">Kelso in charge</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_681.html">California Medical Facility</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_682.html">Find Savings</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_683.html">Enter Medical Parole</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_684.html">The case of Carl Wade</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_685.html">Medical parole for Carl Wade?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_90_id_686.html">Appendix 1</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/90/California&#32;Policy&#32;for&#32;Ill&#32;and&#32;Elderly&#32;Inmates_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_90.html">Home</a></div>		
-		<h1 class="title">Biography: Carl&nbsp;Wade</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float:left;padding:10px">
-	<img src="../../files/photos/600/Carl&#32;Wade.JPG" style="width: 200px; height: 191px; " /><br />
-	<p class="caption">
-		Carl Wade</p>
-</div>
-
-	Carl Wade was 65 in 2011. He was imprisoned first in 1989 in Colorado, then transferred to California in 2000. In 2003, he was brought to the California Medical Facility in Vacaville. He had been a woodcutter.&nbsp;</p>
-<p>
-	<i>Carl Wade on his petition for compassionate release.&nbsp;</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/229/Carl&#32;Wade&#32;bio&#32;clip.mp3" /></p>
-</div>
+  </style>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/90/Community_Savings.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tbody>
+      <tr>
+       <td style="width: 100%;">
+        <h1 class="site-name">
+         <a href="case_id_90.html" title="Home">
+          <span>
+           Biography: Carl Wade
+          </span>
+         </a>
+        </h1>
+       </td>
+       <td class="kcsi_logo">
+        <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+        </a>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_90.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_677.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_678.html">
+          CA Prison Health
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_679.html">
+          Receivership
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_680.html">
+          Kelso in charge
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_681.html">
+          California Medical Facility
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_682.html">
+          Find Savings
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_683.html">
+          Enter Medical Parole
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_684.html">
+          The case of Carl Wade
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_685.html">
+          Medical parole for Carl Wade?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_686.html">
+          Appendix 1
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_90_id_191_c_bio.html">Clark&nbsp;Kelso</a></li>
-
-<li class="leaf"><a  href="case_id_90_id_192_c_bio.html">Dr. Steven&nbsp;Tharrat</a></li>
-
-<li class="leaf"><a  href="case_id_90_id_193_c_bio.html">Joyce&nbsp;Hayhoe</a></li>
-
-<li class="leaf"><a  href="case_id_90_id_194_c_bio.html">Nancy&nbsp;Kincaid</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_90_id_195_c_bio.html">Carl&nbsp;Wade</a></li>
-
-<li class="leaf"><a  href="case_id_90_id_196_c_bio.html">Dr. Joseph&nbsp;Bick</a></li>
-
-<li class="leaf"><a  href="case_id_90_id_197_c_bio.html">Dr. Ricki&nbsp;Barnett</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/90/California Policy for Ill and Elderly Inmates_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_90.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Carl Wade
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:left;padding:10px">
+         <img src="../../files/photos/600/Carl Wade.JPG" style="width: 200px; height: 191px; "/>
+         <br/>
+         <p class="caption">
+          Carl Wade
+         </p>
+        </div>
+        Carl Wade was 65 in 2011. He was imprisoned first in 1989 in Colorado, then transferred to California in 2000. In 2003, he was brought to the California Medical Facility in Vacaville. He had been a woodcutter.
+        <p>
+        </p>
+        <p>
+         <i>
+          Carl Wade on his petition for compassionate release.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/229/Carl Wade bio clip.mp3"/>-->
+         <audio controls><source src="../../files/audios/229/Carl&#32;Wade&#32;bio&#32;clip.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_90_id_191_c_bio.html">
+          Clark Kelso
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_192_c_bio.html">
+          Dr. Steven Tharrat
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_193_c_bio.html">
+          Joyce Hayhoe
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_194_c_bio.html">
+          Nancy Kincaid
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_90_id_195_c_bio.html">
+          Carl Wade
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_196_c_bio.html">
+          Dr. Joseph Bick
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_90_id_197_c_bio.html">
+          Dr. Ricki Barnett
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
