--- a/casestudies/91/casestudy/www/layout/case_id_91_id_199_c_bio.html
+++ b/casestudies/91/casestudy/www/layout/case_id_91_id_199_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Lynn  Silver | Voluntary or Regulated? The Trans Fat Campaign in New York City
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Lynn  Silver | Voluntary or Regulated? The Trans Fat Campaign in New York City
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=cp1252" http-equiv="Content-Type"/>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+  <style media="all" type="text/css">
+   @import "css_global/book/book.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/node/node.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/defaults.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/system/system.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/user/user.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/img_assist/img_assist.css";
+  </style>
+  <style media="all" type="text/css">
+   @import "css_global/knightcase/style.css";
+  </style>
+  <style media="print" type="text/css">
+   @import "css_global/knightcase/print.css";
+  </style>
+  <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+  </script>
+  <script src="js/img_assist.js" type="text/javascript">
+  </script>
+  <script src="js/audioimage.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+  </script>
+  <script src="com/jquery/jquery.media.js" type="text/javascript">
+  </script>
+  <script src="swfobject.js" type="text/javascript">
+  </script>
+  <script type="text/javascript">
+   var GB_ROOT_DIR = "com/greybox/";
+  </script>
+  <script src="com/greybox/AJS.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/AJS_fx.js" type="text/javascript">
+  </script>
+  <script src="com/greybox/gb_scripts.js" type="text/javascript">
+  </script>
+  <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+  <script type="text/javascript">
+   var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
-    $(function() {
+  </script>
+  <script type="text/javascript">
+   $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+  </script>
+  <style>
+   #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,252 +84,221 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/91/180-01155_NYCTransfatv4.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_91.html" title="Home"><span>Biography: Lynn  Silver</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_91.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_699.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_700.html">Trans Fat</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_701.html">New York City Department of Health</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_702.html">Choosing a campaign</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_703.html">Mandatory or Voluntary? </a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_704.html">Measures and Partners</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_705.html">Campaign launches</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_706.html">Preparing to regulate</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_707.html">Clear and enforceable?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_91_id_708.html">Appendix 1</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/91/Voluntary&#32;or&#32;Regulated_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_91.html">Home</a></div>		
-		<h1 class="title">Biography: Lynn &nbsp;Silver</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float:left;padding:10px">
-	<img src="../../files/photos/613/LynnSilver.jpg" style="width: 250px; height: 166px; " />
-	<p class="caption">
-		Lynn Silver</p>
-</div>
-<p>
-	Lynn Silver joined the New York City Department of Health and Mental Hygiene in 2004 as Assistant Commissioner for Chronic Disease Prevention and Control and director of the Office of Science and Policy. Before that, she had spent 20 years working and teaching about food and drug regulation. She had consulted to the World Health Organization, and spent time at the Karolinska Institute in Sweden.</p>
-<p>
-	<i>Lynn Silver explains how transfats were brought to her attention.&nbsp;</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/271/Silverbioquote.mp3" /></p>
-</div>
+  </style>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/91/180-01155_NYCTransfatv4.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tbody>
+      <tr>
+       <td style="width: 100%;">
+        <h1 class="site-name">
+         <a href="case_id_91.html" title="Home">
+          <span>
+           Biography: Lynn  Silver
+          </span>
+         </a>
+        </h1>
+       </td>
+       <td class="kcsi_logo">
+        <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+        </a>
+       </td>
+      </tr>
+     </tbody>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_91.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_699.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_700.html">
+          Trans Fat
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_701.html">
+          New York City Department of Health
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_702.html">
+          Choosing a campaign
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_703.html">
+          Mandatory or Voluntary?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_704.html">
+          Measures and Partners
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_705.html">
+          Campaign launches
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_706.html">
+          Preparing to regulate
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_707.html">
+          Clear and enforceable?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_708.html">
+          Appendix 1
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_91_id_198_c_bio.html">Elliot&nbsp;Marcus</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_91_id_199_c_bio.html">Lynn &nbsp;Silver</a></li>
-
-<li class="leaf"><a  href="case_id_91_id_200_c_bio.html">Gail&nbsp;Goldstein</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/91/Voluntary or Regulated_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_91.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Lynn  Silver
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:left;padding:10px">
+         <img src="../../files/photos/613/LynnSilver.jpg" style="width: 250px; height: 166px; "/>
+         <p class="caption">
+          Lynn Silver
+         </p>
+        </div>
+        <p>
+         Lynn Silver joined the New York City Department of Health and Mental Hygiene in 2004 as Assistant Commissioner for Chronic Disease Prevention and Control and director of the Office of Science and Policy. Before that, she had spent 20 years working and teaching about food and drug regulation. She had consulted to the World Health Organization, and spent time at the Karolinska Institute in Sweden.
+        </p>
+        <p>
+         <i>
+          Lynn Silver explains how transfats were brought to her attention.
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/271/Silverbioquote.mp3"/>-->
+         <audio controls><source src="../../files/audios/271/Silverbioquote.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_91_id_198_c_bio.html">
+          Elliot Marcus
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_91_id_199_c_bio.html">
+          Lynn  Silver
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_91_id_200_c_bio.html">
+          Gail Goldstein
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
